frontend work in progress

--- a/frontend/partials/results-list.html
+++ b/frontend/partials/results-list.html
@@ -1,1 +1,7 @@
-<p> I am the results list </p>
+<ul class="events">
+    <li ng-repeat="event in events" class="thumbnail">
+      <a href="#/events/{{event.id}}" class="thumb"><img ng-src="{{event.imageUrl}}"></a>
+      <a href="#/events/{{event.id}}">{{event.EventName}}</a>
+      <p>{{event.category}}</p>
+    </li>
+</ul>
