--- a/html/css/starter-template.css
+++ b/html/css/starter-template.css
@@ -8,8 +8,7 @@
     /* RGBa with 0.6 opacity */
     background-color: rgba(0, 0, 0, 0.6);
 }  
-
-body{
+body.homepage{
   background:#ffffff url(../images/bg-concert.jpg) no-repeat center top fixed;
   font-family:Lato;
 }
@@ -62,3 +61,11 @@ body{
   clear:both;
 }
 
+body.gray-bg{
+  background:#e9e9e9;
+}
+
+.white-bg{
+  background:#ffffff;
+  min-height:600px;
+}
