--- a/html/css/starter-template.css
+++ b/html/css/starter-template.css
@@ -1,3 +1,6 @@
+.black-bg {
+    background:#000000; 
+}
 .navbar-fixed-top{
   background:#000000;  
   }
@@ -8,9 +11,18 @@
     /* RGBa with 0.6 opacity */
     background-color: rgba(0, 0, 0, 0.6);
 }  
+.alpha80 {
+    /* Fallback for web browsers that don't support RGBa */
+    background-color: rgb(0, 0, 0);
+    /* RGBa with 0.6 opacity */
+    background-color: rgba(0, 0, 0, 0.8);
+} 
 body.homepage{
   background:#ffffff url(../images/bg-concert.jpg) no-repeat center top fixed;
-  font-family:Lato;
+ 
+}
+body {
+     font-family:Lato;
 }
 
 .starter-template{
@@ -68,4 +80,102 @@ body.gray-bg{
 .white-bg{
   background:#ffffff;
   min-height:600px;
+}
+
+.result-container {
+    padding-top:60px;
+}
+
+.highlight-text {
+    color:#ff8888;
+}
+
+.space-bottom {
+    padding-bottom:10px;
+}
+
+.hotel-description {
+color: #ffffff;
+  position: relative;
+  top: -63px;
+  height: 63px;
+}
+
+    .hotel-description h2 {
+      padding-top: 18px;
+      padding-left: 15px;
+      width: auto;
+      display: block;
+      float: left;
+      margin-top: 0px;
+      padding-right: 5px;
+      font-size:170%;
+    }
+
+.star {
+    background: url(../images/star.png) no-repeat;
+    width: 20px;
+    height: 20px;
+    display: block;
+    float: left;
+    margin-top: 18px;
+    margin-left: 1px;
+}
+.price-md {
+    font-size: 30px;
+  float: right;
+  padding-top: 12px;
+  padding-right: 15px;
+}
+
+.hotel-container {
+    overflow:hidden;
+    padding-right: 0;
+    height: 220px;
+}
+
+    .hotel-container img {
+        min-height: 219px;
+        min-width: 100%;
+    }
+
+.image-container {
+    width: 100%;
+    height: 220px;
+    overflow:hidden;
+}
+
+.summarry {
+   padding-top: 5px;
+  border: 1px solid #bcbcbc;
+  overflow: hidden;
+  padding-bottom: 5px;
+}
+
+    .summarry p {
+        padding-top:6px;
+    }
+
+.no-left-padding {
+    padding-left:1px;
+}
+
+.small-padding-right{
+
+    padding-right: 5px;
+}
+
+.flights-summarry {
+    padding : 5px;
+  border: 1px solid #bcbcbc;
+  border-bottom:0px;
+  height: 34px;
+  color:#ffffff;
+}
+ .flights-summarry span{
+     padding-right: 5px;
+}
+
+.flights-summarry .highlight-text{
+    color: yellow;
 }
