--- a/html/css/starter-template.css
+++ b/html/css/starter-template.css
@@ -77,7 +77,7 @@ body {
   clear:both;
 }
 
-body.gray-bg{
+body.graybg{
   background:#e9e9e9;
 }
 
@@ -131,6 +131,7 @@ color: #ffffff;
   padding-top: 12px;
   padding-right: 15px;
 }
+.ngmap{ height: 220px;}
 
 .hotel-container {
     overflow:hidden;
@@ -187,4 +188,15 @@ color: #ffffff;
 .result-box {
 
 margin-bottom:20px;
+}
+
+.please-wait{   
+position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #FFFFFF;
+    width: 100%;
+    min-height: 500px;
+    text-align: center;
+    padding-top: 100px;
 }
